--- a/libs/db-api/package.json
+++ b/libs/db-api/package.json
@@ -14,5 +14,9 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7"
+  },
+  "dependencies": {
+    "@nestjs/core": "^11.1.3",
+    "@nestjs/microservices": "^11.1.3"
   }
 }
