--- a/libs/common/package.json
+++ b/libs/common/package.json
@@ -7,8 +7,11 @@
     "build": "tsc -p tsconfig.lib.json"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.0.0",
+    "@nestjs/common": "^11.1.3",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/microservices": "^11.1.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "rxjs": "^7.2.0"
   }
 }
