--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "@nestjs/common": "^11.1.3",
     "@prisma/client": "^6.10.1",
-    "class-transformer": "^0.5.1"
+    "@nestjs/microservices": "^11.1.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
