--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "open": "10.1.2",
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
