--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - '5432:5432'
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: '4dm1n$1Z3'
+      POSTGRES_PASSWORD: SUA_SENHA
       POSTGRES_DB: vehicle_tracking
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -20,9 +20,6 @@ services:
     ports:
       - '5672:5672'
       - '15672:15672'
-    environment:
-      - RABBITMQ_DEFAULT_USER=admin
-      - RABBITMQ_DEFAULT_PASS='4dm1n$1Z3'
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq/
 
